force-app/main/default/objects/ccrz__E_RuleTargetSpec__c/ccrz__E_RuleTargetSpec__c.object-meta.xml
<CustomObject>
    <label>CC Rule Target Spec</label>
    <nameField>
        <label>Rule Target Spec</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Target Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>