force-app/main/default/objects/ccrz__E_RuleTargetSpec__c/fields/ccrz__RuleTargetSpecId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleTargetSpecId__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>RuleTargetSpec Id</label>
    <type>AutoNumber</type>
</CustomField>