force-app/main/default/objects/ccrz__E_RuleTargetSpec__c/fields/ccrz__Spec__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Spec__c</fullName>
    <label>Spec</label>
    <referenceTo>ccrz__E_Spec__c</referenceTo>
    <relationshipLabel>Rule Target Specs</relationshipLabel>
    <relationshipName>Rule_Target_Specs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>